2022-02-11  Chris Dumez  <cdumez@apple.com>

        Regression(r287684) Microsoft teams meeting URLs fail to open the app
        https://bugs.webkit.org/show_bug.cgi?id=236516
        <rdar://88678598>

        Reviewed by Geoffrey Garen.

        Add a quirk for Microsoft teams.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::decidePolicyForNavigationAction):

2022-02-11  Simon Fraser  <simon.fraser@apple.com>

        Introduce a RemoteLayerBackingStoreCollection subclass for GPU Process-based rendering
        https://bugs.webkit.org/show_bug.cgi?id=236468

        Reviewed by Tim Horton.

        Add RemoteLayerWithRemoteRenderingBackingStoreCollection, a subclass of RemoteLayerBackingStoreCollection
        which is instantiated by RemoteLayerTreeContext when DOM rendering in GPU process is enabled.

        Delegate buffer allocation to this now polymorphic class; RemoteLayerBackingStore no longer
        consults shouldUseRemoteRenderingFor().

        RemoteLayerWithRemoteRenderingBackingStoreCollection needs a back pointer to RemoteLayerTreeContext
        to get to the RemoteRenderingBackendProxy.

        * Shared/RemoteLayerTree/RemoteLayerBackingStore.h:
        * Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
        (WebKit::RemoteLayerBackingStore::backingStoreCollection const):
        (WebKit::RemoteLayerBackingStore::swapToValidFrontBuffer):
        * Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.h:
        (WebKit::RemoteLayerBackingStoreCollection::layerTreeContext const):
        * Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.mm:
        (WebKit::RemoteLayerBackingStoreCollection::RemoteLayerBackingStoreCollection):
        (WebKit::RemoteLayerBackingStoreCollection::allocateBufferForBackingStore):
        * Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStoreCollection.h: Added.
        * Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStoreCollection.mm: Added.